--- a/index.html
+++ b/index.html
@@ -1,49 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Wedding Agency</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-</head>
+  <body>
+    <header class="container header">
+      <a href="./index.html" class="logo">logo</a>
+      <nav>
+        <ul class="header-list">
+          <li class="item"><a href="">Home</a></li>
+          <li class="item"><a href="">About Us</a></li>
+          <li class="item"><a href="">Services</a></li>
+          <li class="item"><a href="">Blogs</a></li>
+        </ul>
+      </nav>
+      <button type="button" class="header-btn">Gift Finder</button>
+    </header>
+    <main>
+      <section>
+        <h1>Find a gift for your wife or girlfriend</h1>
+        <p>Struggling to find a gift for your wife or girlfriend? No problem!</p>
+        <button type="button">Find gift now</button>
+        <img src="./images/Background.jpg" alt="happy couple" width="719" height="700" />
+      </section>
 
-<body>
-  <header>
-    <a href="./index.html">logo</a>
-    <nav>
-      <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">About Us</a></li>
-        <li><a href="">Services</a></li>
-        <li><a href="">Blogs</a></li>
-      </ul>
-    </nav>
-    <button type="button">Gift Finder</button>
-  </header>
-  <main>
-    <section>
-      <h1>Find a gift for your wife or girlfriend</h1>
-      <p>
-        Struggling to find a gift for your wife or girlfriend? No problem!
-      </p>
-      <button type="button">Find gift now</button>
-      <img src="./images/Background.jpg" alt="happy couple" width="719" height="700" />
-    </section>
-
-    <section>
-      <img src="./images/media.jpg" alt="Postcard" width="730">
-      <h2>How we work</h2>
-      <p>We’ve actually already asked hundreds of women what they want, and made a database with the results. All you
-        have to do
-        is take our short survey that only takes seconds, and our proprietary algorithm will match you with a few
-        perfect gift
-        options.</p>
-      <button type="button">Learn More</button>
-    </section>
-
-    
-  </main>
-</body>
-
+      <section>
+        <img src="./images/media.jpg" alt="Postcard" width="730" />
+        <h2>How we work</h2>
+        <p>
+          We’ve actually already asked hundreds of women what they want, and made a database with
+          the results. All you have to do is take our short survey that only takes seconds, and our
+          proprietary algorithm will match you with a few perfect gift options.
+        </p>
+        <button type="button">Learn More</button>
+      </section>
+    </main>
+  </body>
 </html>
