--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       <a href="./index.html" class="logo">logo</a>
       <nav>
         <ul class="header-list">
-          <li class="item"><a href="">Home</a></li>
-          <li class="item"><a href="">About Us</a></li>
-          <li class="item"><a href="">Services</a></li>
-          <li class="item"><a href="">Blogs</a></li>
+          <li class="item"><a href="" class="link">Home</a></li>
+          <li class="item"><a href="" class="link">About Us</a></li>
+          <li class="item"><a href="" class="link">Services</a></li>
+          <li class="item"><a href="" class="link">Blogs</a></li>
         </ul>
       </nav>
       <button type="button" class="header-btn">Gift Finder</button>
