--- a/index.html
+++ b/index.html
@@ -1,88 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Wedding Agency</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/main.min.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Wedding Agency</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Roboto:wght@400;500;700&display=swap"
-    rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="./css/style.css" />
-</head>
+  <body>
+    <header class="container header">
+      <a href="./index.html" class="logo">logo</a>
+      <nav class="header__nav">
+        <ul class="header__list">
+          <li class="header__item"><a href="" class="header__link link">Home</a></li>
+          <li class="header__item"><a href="" class="header__link link">About Us</a></li>
+          <li class="header__item"><a href="" class="header__link">Services</a></li>
+          <li class="header__item"><a href="" class="header__link link">Blogs</a></li>
+        </ul>
+      </nav>
+      <button type="button" class="header__btn">Gift Finder</button>
+    </header>
+    <main>
+      <section class="container hero">
+        <div class="hero__box">
+          <h1 class="hero__title">Find a gift for your wife or girlfriend</h1>
+          <p class="hero__text">
+            Struggling to find a gift for your wife or girlfriend? No problem!
+          </p>
+          <button type="button" class="hero__button">Find gift now</button>
+        </div>
+        <div class="hero__image">
+          <img src="./images/Background.jpg" alt="happy couple" width="719" height="700" />
+        </div>
+      </section>
 
-<body>
-  <header class="container header">
-    <a href="./index.html" class="logo">logo</a>
-    <nav class="header__nav">
-      <ul class="header__list">
-        <li class="header__item"><a href="" class="header__link link">Home</a></li>
-        <li class="header__item"><a href="" class="header__link link">About Us</a></li>
-        <li class="header__item"><a href="" class="header__link">Services</a></li>
-        <li class="header__item"><a href="" class="header__link link">Blogs</a></li>
-      </ul>
-    </nav>
-    <button type="button" class="header__btn">Gift Finder</button>
-  </header>
-  <main>
-    <section class="container hero">
-      <div class="hero__box">
-        <h1 class="hero__title">Find a gift for your wife or girlfriend</h1>
-        <p class="hero__text">Struggling to find a gift for your wife or girlfriend? No problem!</p>
-        <button type="button" class="hero__button">Find gift now</button>
-      </div>
-      <div class="hero__image">
-        <img src="./images/Background.jpg" alt="happy couple" width="719" height="700" />
-      </div>
-    </section>
+      <section class="container feature">
+        <div class="feature__image">
+          <img src="./images/media.jpg" alt="Postcard" width="720" />
+        </div>
+        <div class="feature__box">
+          <h2 class="feature__title">How we work</h2>
+          <p class="feature__text">
+            We’ve actually already asked hundreds of women what they want, and made a database with
+            the results. All you have to do is take our short survey that only takes seconds, and
+            our proprietary algorithm will match you with a few perfect gift options.
+          </p>
+          <button type="button" class="feature__button">Learn More</button>
+        </div>
+      </section>
 
-    <section class="container feature">
-      <div class="feature__image">
-        <img src="./images/media.jpg" alt="Postcard" width="720" />
-      </div>
-      <div class="feature__box">
-        <h2 class="feature__title">How we work</h2>
-        <p class="feature__text">
-          We’ve actually already asked hundreds of women what they want, and made a database with
-          the results. All you have to do is take our short survey that only takes seconds, and our
-          proprietary algorithm will match you with a few perfect gift options.
-        </p>
-        <button type="button" class="feature__button">Learn More</button>
-      </div>
-    </section>
-
-    <section class="container post">
-      <h2 class="post__title">Gifts for all Occasions</h2>
-      <p class="post__text">“Try our web app to find the best gifts for all occasions”</p>
-      <ul class="post__list">
-        <li class="post__item"><img src="./images/Rectangle1.jpg" alt="birthday cake">
-          <div class="post__box">
-            <h3 class="post__box-title">Birthday</h3><a href="" class="post__link">See More ›</a>
-          </div>
-        </li>
-        <li class="post__item"><img src="./images/Rectangle2.jpg" alt="good wife">
-          <div class="post__box">
-            <h3 class="post__box-title">Anniversary</h3><a href="" class="post__link">See More ›</a>
-          </div>
-        </li>
-        <li class="post__item"><img src="./images/Rectangle3.jpg" alt="icons">
-          <div class="post__box">
-            <h3 class="post__box-title">Valentine's Day</h3><a href="" class="post__link">See More ›</a>
-          </div>
-        </li>
-        <li class="post__item"><img src="./images/Rectangle4.jpg" alt="green tree">
-          <div class="post__box">
-            <h3 class="post__box-title">Christmas</h3><a href="" class="post__link">See More ›</a>
-          </div>
-        </li>
-      </ul>
-    </section>
-  </main>
-</body>
-
+      <section class="container post">
+        <h2 class="post__title">Gifts for all Occasions</h2>
+        <p class="post__text">“Try our web app to find the best gifts for all occasions”</p>
+        <ul class="post__list">
+          <li class="post__item">
+            <img src="./images/Rectangle1.jpg" alt="birthday cake" />
+            <div class="post__box">
+              <h3 class="post__box-title">Birthday</h3>
+              <a href="" class="post__link">See More ›</a>
+            </div>
+          </li>
+          <li class="post__item">
+            <img src="./images/Rectangle2.jpg" alt="good wife" />
+            <div class="post__box">
+              <h3 class="post__box-title">Anniversary</h3>
+              <a href="" class="post__link">See More ›</a>
+            </div>
+          </li>
+          <li class="post__item">
+            <img src="./images/Rectangle3.jpg" alt="icons" />
+            <div class="post__box">
+              <h3 class="post__box-title">Valentine's Day</h3>
+              <a href="" class="post__link">See More ›</a>
+            </div>
+          </li>
+          <li class="post__item">
+            <img src="./images/Rectangle4.jpg" alt="green tree" />
+            <div class="post__box">
+              <h3 class="post__box-title">Christmas</h3>
+              <a href="" class="post__link">See More ›</a>
+            </div>
+          </li>
+        </ul>
+      </section>
+    </main>
+  </body>
 </html>
